--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,7 @@ name = "GWecc"
 uuid = "7a00343e-1486-4c3e-99d0-061b9ee738a7"
 authors = ["Abhimanyu Susobhanan <abhisrkckl@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
+JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
