--- a/Project.toml
+++ b/Project.toml
@@ -5,4 +5,5 @@ version = "0.1.0"
 
 [deps]
 DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
+HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
