--- a/Project.toml
+++ b/Project.toml
@@ -6,5 +6,6 @@ version = "0.1.0"
 [deps]
 DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
 HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
