utility functions for antenna pattern

--- a/Project.toml
+++ b/Project.toml
@@ -9,5 +9,6 @@ FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
