--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+
 .vscode/*
 
 *.pyc
+build/
+dist/
+src/*.egg-info/*
