--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
 Cosmology = "76746363-e552-5dba-9a5a-cef6fa9cc5ab"
+CubicHermiteSpline = "2338ea46-7d83-48cf-b44e-cf8e0b5b9cc1"
 DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
