--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          sudo apt install libsuitesparse-dev
           python -m pip install --upgrade pip
           pip install pytest numpy cython
           python setup.py install
