--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          conda install tempo2
+          conda install -c conda-forge tempo2
           sudo apt install libsuitesparse-dev
           python -m pip install --upgrade pip
           pip install pytest numpy cython
