--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          sudo apt install libsuitesparse-dev
+          sudo apt-get install libsuitesparse-dev
+          curl -sSL https://raw.githubusercontent.com/vallis/libstempo/master/install_tempo2.sh | sh
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       # - name: Test with pytest
