--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,9 +61,9 @@ jobs:
         run: |
           sudo apt-get install libsuitesparse-dev
           curl -sSL https://raw.githubusercontent.com/vallis/libstempo/master/install_tempo2.sh | sh
-          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade pip setuptools wheel pytest pytest-cov
           pip install -r requirements.txt
       - name: Test with pytest
         run: |
-          pytest
+          pytest --full-trace --cov-report html --cov-report xml
 
