--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,7 @@ jobs:
           curl -sSL https://raw.githubusercontent.com/vallis/libstempo/master/install_tempo2.sh | sh
           python -m pip install --upgrade pip setuptools wheel pytest pytest-cov
           pip install -r requirements.txt
+          pip install .
       - name: Test with pytest
         run: |
           pytest --full-trace --cov-report html --cov-report xml
