--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,4 +68,5 @@ jobs:
       - name: Test with pytest
         run: |
           pytest --full-trace --cov-report html --cov-report xml
-
+      - name: Codecov
+          uses: codecov/codecov-action@v3
