--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,6 @@ jobs:
           pip install .
       - name: Test with pytest
         run: |
-          pytest --full-trace --cov-report xml --cov GWecc
+          pytest --full-trace --cov-report xml --cov enterprise_gwecc
       - name: Codecov
         uses: codecov/codecov-action@v3
