--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,5 +68,5 @@ jobs:
       - name: Test with pytest
         run: |
           pytest --full-trace --cov-report xml --cov enterprise_gwecc
-      - name: Codecov
-        uses: codecov/codecov-action@v3
+      # - name: Codecov
+      #   uses: codecov/codecov-action@v3
