--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,3 +70,27 @@ jobs:
           pytest --full-trace --cov-report xml --cov enterprise_gwecc
       # - name: Codecov
       #   uses: codecov/codecov-action@v3
+    
+  examples:
+    name: Examples
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install dependencies
+        run: |
+          sudo apt-get install libsuitesparse-dev
+          curl -sSL https://raw.githubusercontent.com/vallis/libstempo/master/install_tempo2.sh | sh
+          python -m pip install --upgrade pip setuptools wheel pytest pytest-cov
+          pip install -r requirements.txt
+          julia -e 'import Pkg; Pkg.add(path=".")'
+          pip install .
+      - name: Run examples
+        run: |
+          julia examples/benchmark.jl
+          julia examples/lbar_gammabar_vs_e.jl
+          julia examples/residuals_1psr.jl
+          julia examples/residuals_components.jl
+          julia examples/residuals_terms.jl
+          julia examples/residuals_terms_px.jl
+          julia examples/tau_vs_e.jl
+          julia examples/waveform_residuals_px.jl
+          python examples/enterprise_example.py
