--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
         run: |
           sudo apt-get install libsuitesparse-dev
           curl -sSL https://raw.githubusercontent.com/vallis/libstempo/master/install_tempo2.sh | sh
-          python -m pip install --upgrade pip setuptools wheel pytest pytest-cov
+          python -m pip install --upgrade pip setuptools wheel pytest pytest-cov libstempo
           pip install -r requirements.txt
           julia -e 'import Pkg; Pkg.add(path="."); Pkg.add(["BenchmarkTools", "PyPlot", "PythonCall"])'
           pip install .
@@ -95,5 +95,6 @@ jobs:
           julia residuals_terms_px.jl
           julia tau_vs_e.jl
           julia waveform_residuals_px.jl
+          python simulation_example.py
           python enterprise_example.py
           cd ..
