--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,7 @@ jobs:
       matrix:
         version:
           - '1.8' 
-          - '1' 
-          - 'nightly'
+          - '1.9'
         os:
           - ubuntu-latest
         arch:
@@ -51,7 +50,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.10"]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -68,7 +67,7 @@ jobs:
           pip install .
       - name: Test with pytest
         run: |
-          pytest --full-trace --cov-report xml --cov enterprise_gwecc
+          pytest --full-trace --cov-report xml --cov test/test_enterprise_gwecc.py
       # - name: Codecov
       #   uses: codecov/codecov-action@v3
     
