--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: |
-          sudo apt-get install libsuitesparse-dev
+          # sudo apt-get install libsuitesparse-dev
           # curl -sSL https://raw.githubusercontent.com/vallis/libstempo/master/install_tempo2.sh | sh
           # python -m pip install --upgrade pip setuptools wheel pytest pytest-cov libstempo
           # pip install -r requirements.txt
