--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
           # curl -sSL https://raw.githubusercontent.com/vallis/libstempo/master/install_tempo2.sh | sh
           # python -m pip install --upgrade pip setuptools wheel pytest pytest-cov libstempo
           # pip install -r requirements.txt
-          julia -e 'import Pkg; Pkg.add(path="."); Pkg.add(["BenchmarkTools", "Makie"])'
+          julia -e 'import Pkg; Pkg.add(path="."); Pkg.add(["BenchmarkTools", "GLMakie"])'
           # pip install .
       - name: Run examples
         run: |
