--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
           julia benchmark.jl
           julia lbar_gammabar_vs_e.jl
           julia residuals_1psr.jl
-          #julia residuals_components.jl
+          julia residuals_components.jl
           #julia residuals_terms.jl
           #julia residuals_terms_px.jl
           #julia tau_vs_e.jl
