--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,8 +92,8 @@ jobs:
           julia lbar_gammabar_vs_e.jl
           julia residuals_1psr.jl
           julia residuals_components.jl
-          #julia residuals_terms.jl
-          #julia residuals_terms_px.jl
+          julia residuals_terms.jl
+          julia residuals_terms_px.jl
           #julia tau_vs_e.jl
           #julia waveform_residuals_px.jl
           #python simulation_example.py
