--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
           julia residuals_components.jl
           julia residuals_terms.jl
           julia residuals_terms_px.jl
-          #julia tau_vs_e.jl
+          julia tau_vs_e.jl
           #julia waveform_residuals_px.jl
           #python simulation_example.py
           #python enterprise_example.py
