--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,7 @@ jobs:
           julia residuals_terms.jl
           julia residuals_terms_px.jl
           julia tau_vs_e.jl
-          #julia waveform_residuals_px.jl
+          julia waveform_residuals_px.jl
           #python simulation_example.py
           #python enterprise_example.py
           cd ..
