--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.8' 
-          - '1' 
-          - 'nightly'
+          - '1.9'
+          - '1.10'
         os:
           - ubuntu-latest
         arch:
@@ -51,7 +50,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.9", "3.10"]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
